--- a/first/templates/create_bot.html
+++ b/first/templates/create_bot.html
@@ -20,7 +20,7 @@
                 <input id="shortname" required type="text" class="form-control m-1" placeholder="Bot short name" name="short_name">
                 <button type="button" id="get_data" class="btn card-text text-primary text-end" data-bs-toggle="modal"
                         data-bs-target="#staticBackdrop"
-                        style="font-size: 24px; margin-right: 100px;display: inline-block; margin-left: 0;">Где взять данные?
+                        style="font-size: 24px; margin-right: 100px;display: inline-block; margin-left: 0; min-width: 0;">Где взять данные?
                 </button>
                 <div class="modal fade" style="margin-top: 15vh;" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
                      tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
