--- a/staticroot/style.css
+++ b/staticroot/style.css
@@ -45,8 +45,8 @@ a.nav-hover:hover{
     cursor: pointer;
     padding: 2%;
     border-radius: 50%;
-    width: 5%;
-    height: 5%;
+    width: 50px;
+    height: 50px;
     background-image: url(../../staticroot/media/button_up.png);
     background-position: center;
     background-repeat: no-repeat;
@@ -67,8 +67,8 @@ a.nav-hover:hover{
     cursor: pointer;
     padding: 2%;
     border-radius: 50%;
-    width: 5%;
-    height: 5%;
+    width: 50px;
+    height: 50px;
     background-image: url(../../staticroot/media/button_down.png);
     background-position: center;
     background-repeat: no-repeat;
