--- a/first/templates/base.html
+++ b/first/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="{% static 'media/ico.png' %}" type="image/png">
+    <link rel="shortcut icon" href="{% static 'media/ico.jpg' %}" type="image/png">
 </head>
 <body>
 <header>
