--- a/first/templates/telegram_auth.html
+++ b/first/templates/telegram_auth.html
@@ -5,13 +5,7 @@
         <div class="card col-8 offset-2 p-5" style="margin-top: 10vh;">
             <h2 class="text-center">Наш сайт работает с телеграмм, поэтому авторизуйтесь с помощью своего телеграмм-аккаунта</h2>
             <div class="col-8 offset-4 mt-3">
-                <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="bg_auth_bot" data-size="large" data-auth-url="https://botgod.site/auth/complete/telegram" data-request-access="write"></script>
-<!--                    <script async src="https://telegram.org/js/telegram-widget.js?22" data-telegram-login="bg_auth_bot" data-size="large" data-onauth="onTelegramAuth(user)" data-request-access="write"></script>-->
-<!--                    <script type="text/javascript">-->
-<!--                      function onTelegramAuth(user) {-->
-<!--                        alert('Logged in as ' + user.first_name + ' ' + user.last_name + ' (' + user.id + (user.username ? ', @' + user.username : '') + ')');-->
-<!--                      }-->
-<!--                    </script>-->
+                <a href="../staticroot/1.html" style="padding: 10px;">Войти через Telegram</a>
             </div>
         </div>
     </div>
